@@ -10340,14 +10340,32 @@
     neg_op0 = GEN_INT (- INTVAL (operands[1]));
 
   if (TARGET_UPDATE)
-    emit_insn ((* ((TARGET_32BIT) ? gen_movsi_update : gen_movdi_di_update))
-		(stack_pointer_rtx, stack_pointer_rtx, neg_op0, chain));
+    {
+      rtx insn, par, set, mem;
+
+      insn = emit_insn ((* ((TARGET_32BIT) ? gen_movsi_update
+					   : gen_movdi_di_update))
+			(stack_pointer_rtx, stack_pointer_rtx, neg_op0,
+			 chain));
+      /* Since we didn't use gen_frame_mem to generate the MEM, grab
+         it now and set the alias set/attributes. The above gen_*_update
+         calls will generate a PARALLEL with the MEM set being the first
+         operation. */
+      par = PATTERN (insn);
+      gcc_assert (GET_CODE (par) == PARALLEL);
+      set = XVECEXP (par, 0, 0);
+      gcc_assert (GET_CODE (set) == SET);
+      mem = SET_DEST (set);
+      gcc_assert (MEM_P (mem));
+      MEM_NOTRAP_P (mem) = 1;
+      set_mem_alias_set (mem, get_frame_alias_set ());
+    }
 
   else
     {
       emit_insn ((* ((TARGET_32BIT) ? gen_addsi3 : gen_adddi3))
 		 (stack_pointer_rtx, stack_pointer_rtx, neg_op0));
-      emit_move_insn (gen_rtx_MEM (Pmode, stack_pointer_rtx), chain);
+      emit_move_insn (gen_frame_mem (Pmode, stack_pointer_rtx), chain);
     }
 
   emit_move_insn (operands[0], virtual_stack_dynamic_rtx);
