@@ -1,3 +1,9 @@
+2008-09-26  Pat Haugen  <pthaugen@us.ibm.com>
+
+	* config/rs6000/rs6000.c (rs6000_emit_allocate_stack): Use correct
+	alias set on MEM when saving stack pointer.
+	* config/rs6000/rs6000.md (allocate_stack): Likewise
+
 2008-09-26  Dorit Nuzman  <dorit@il.ibm.com>
 
 	PR tree-optimization/37574
